--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,13 @@
             app:titleTextColor="@color/textColor"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
-        <!-- -->
+        <FrameLayout
+            android:layout_below="@id/toolbar"
+            android:id="@+id/frame_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
     </RelativeLayout>
 
