--- a/app/src/main/res/layout/all_walpaper_layout.xml
+++ b/app/src/main/res/layout/all_walpaper_layout.xml
@@ -12,7 +12,9 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:theme="@style/CustomTheme"
-            app:tabSelectedTextColor="@color/textColor"
+            app:tabTextColor="@color/tabTextColor"
+            app:tabSelectedTextColor="@color/tabSelectedTextColor"
+
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
