--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--base colors-->
     <color name="colorPrimary">#f44336</color>
     <color name="colorPrimaryDark">#db3c31</color>
     <color name="colorAccent">#fff</color>
-
-    <color name="color_place_holder">#4b4a4a</color>
     <color name="textColor">#fff</color>
-    <color name="subTextColor">#71ffffff</color>
+    <color name="subTextColor">#a3000000</color>
 
-    <color name="image_description_background">#50000000</color>
+    <!--tab text-->
+    <color name="tabTextColor">#b0ffffff</color>
+    <color name="tabSelectedTextColor">@color/textColor</color>
 
+    <!--selected image activity-->
     <color name="selected_image_background">#f2f2f2</color>
     <color name="selected_image_text">#333333</color>
     <color name="selected_image_text_others_image">#000</color>
     <color name="selected_image_favor_icon">@color/colorPrimary</color>
+
+    <color name="color_place_holder">#4b4a4a</color>
+
+    <color name="image_description_background">#50000000</color>
+
 </resources>
