--- a/app/src/main/res/layout/activity_selected_image.xml
+++ b/app/src/main/res/layout/activity_selected_image.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/drawer_layout"
@@ -18,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            app:titleTextColor="@color/textColor"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:titleTextColor="@color/textColor" />
 
 
         <android.support.design.widget.CoordinatorLayout
@@ -32,9 +31,9 @@
                 android:id="@+id/big_imageview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/color_place_holder"
                 android:minHeight="400dp"
                 android:scaleType="centerCrop"
-                android:background="@color/color_place_holder"
                 app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
             <!--TODO исправить расположение fab-->
@@ -43,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:layout_marginTop="12dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:src="@drawable/ic_image"
                 app:layout_anchor="@id/big_imageview"
@@ -54,48 +54,50 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="200dp"
-            android:layout_alignParentBottom="true"
             android:layout_below="@id/coordinator_layout"
-            android:background="@color/selected_image_background">
+            android:layout_alignParentBottom="true"
+            android:background="@color/selected_image_background"
+            android:minHeight="200dp">
 
-            <ImageView
-                android:id="@+id/select_activity_favor"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/image_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:paddingTop="16dp"
-                android:paddingStart="16dp"
-                android:src="@drawable/ic_favorite_red"/>
+                android:paddingStart="16dp">
 
-            <TextView
-                android:id="@+id/count_likes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/subTextColor"
-                app:layout_constraintStart_toEndOf="@id/select_activity_favor"
-                android:layout_marginStart="8dp"
-                android:paddingTop="16dp"
-                android:layout_toEndOf="@id/select_activity_favor"/>
+                <ImageView
+                    android:id="@+id/select_activity_favor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_favorite_red" />
 
-            <ImageView
-                android:id="@+id/select_activity_download"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/count_likes"
-                android:layout_marginStart="24dp"
-                android:paddingTop="16dp"
-                android:layout_toEndOf="@id/count_likes"
-                android:src="@drawable/ic_file_download" />
+                <TextView
+                    android:id="@+id/count_likes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/subTextColor"/>
 
-            <TextView
-                android:id="@+id/count_downloads"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/subTextColor"
-                app:layout_constraintStart_toEndOf="@id/select_activity_download"
-                android:layout_marginStart="8dp"
-                android:paddingTop="16dp"
-                android:layout_toEndOf="@id/select_activity_download" />
+                <ImageView
+                    android:id="@+id/select_activity_download"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_file_download"/>
+
+                <TextView
+                    android:id="@+id/count_downloads"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_gravity="center"
+                    android:textColor="@color/subTextColor"/>
+            </LinearLayout>
 
 
             <!--похожие изображения-->
@@ -103,24 +105,22 @@
                 android:id="@+id/similar_images_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp"
                 android:paddingStart="16dp"
-                android:textColor="@color/selected_image_text_others_image"
-                app:layout_constraintBottom_toTopOf="@id/similar_images_rv"
                 android:text="Похожие изображения"
-                android:textSize="18sp" />
+                android:textColor="@color/selected_image_text_others_image"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@id/similar_images_rv" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/similar_images_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/similar_images_tv"
                 android:maxHeight="80dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_below="@id/similar_images_tv" />
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </RelativeLayout>
-
 
 
 </android.support.v4.widget.DrawerLayout>
