--- a/app/src/main/res/layout/menu_header_layout.xml
+++ b/app/src/main/res/layout/menu_header_layout.xml
@@ -4,14 +4,16 @@
     android:orientation="vertical"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="180dp">
 
 
     <ImageView
         android:id="@+id/navigation_header_image_view"
         android:src="@drawable/ic_menu_header"
-        android:layout_marginTop="44dp"
-        android:layout_width="270dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:scaleY="0.6"
+        android:layout_width="140dp"
         android:layout_height="match_parent" />
 
 </LinearLayout>
